kuard/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuard
  labels:
    app: kuard
