kuard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      securityContext:
        fsGroup: 65534
      containers:
        - image: gcr.io/kuar-demo/kuard-amd64:1
          imagePullPolicy: Always
          name: kuard
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/data"
              name: kuard-storage
              subPath: "kuard-data"
      volumes:
        - name: kuard-storage
          persistentVolumeClaim:
            claimName: kuard-pvc
